--- a/docs/team/ChenJiehan318.adoc
+++ b/docs/team/ChenJiehan318.adoc
@@ -65,7 +65,9 @@ include::../UserGuide.adoc[tag=accounts]
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=accounts]
+include::../DeveloperGuide.adoc[tag=accounts_1]
+
+include::../DeveloperGuide.adoc[tag=accounts_2]
 
 
 == PROJECT: PowerPointLabs
