--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -620,7 +620,7 @@ The key steps are as follows:
 ==== Implementation
 
 The incident edit mechanism is facilitated by `EditCommand` class. Validity of user input is checked when `execute()` is called and an exception is thrown if invalid.
-The user can choose to put in any number of fields for editing. There are 2 ways to use the “edit-I” command: 1. ‘edit-I’ without any inputs will filter the incident list to display all incidents available for editing 2. ‘edit-I’ with fields identified for editing.
+The user can choose to put in any number of fields for editing. There are 2 ways to use the “edit-i” command: 1. ‘edit-I’ without any inputs will filter the incident list to display all incidents available for editing 2. ‘edit-I’ with fields identified for editing.
 
 An exception will be thrown under these 2 conditions:
 
@@ -629,7 +629,7 @@ An exception will be thrown under these 2 conditions:
 
 Below is an activity diagram to illustrate the process that the user may go through
 
-image::EditCommandActivity.png[width=300]
+image::EditCommandActivity.png[width=400]
 
 EditIncidentCommand` class makes use of `EditIncident` object to create a new
 `Incident` object with the fields identified by user as well as the untouched
@@ -638,7 +638,7 @@ fields from the original incident. This new `Incident` will replace the original
 
 Below is a sequence diagram to illustrate how the command executes:
 
-image::EditIncidentCommand.png[width=300]
+image::EditIncidentCommand.png[width=500]
 
 [Note]
 The command can only be used by admin accounts or accounts that created/filled/submitted
@@ -683,7 +683,7 @@ Only vehicles with the status `Avaliable` are valid for editing or deleting. Thi
 Implementation of `edit-v` is similar to `edit-i` where `EditVehicleCommand` makes use of `EditVehicle` class to create a new `Vehicle` object with the modified fields and replaces the original object. Design considerations are also similar to that of `edit-i`.
 Below is a sequence diagram to illustrate the process and classes involved in the `edit-v` command:
 
-image::editVehicleCommand.png[width=300]
+image::editVehicleCommand.png[width=500]
 
 //end::vehicleedit[]
 
@@ -699,7 +699,7 @@ image::editVehicleCommand.png[width=300]
 
 Below is a sequence diagram to illustrate add-v:
 
-image::addVehicleCommand.png[width=300]
+image::addVehicleCommand.png[width=500]
 
 //end::vehicleadd[]
 
@@ -715,7 +715,7 @@ image::addVehicleCommand.png[width=300]
 
 Below is a sequence diagram to illustrate delete-v:
 
-image::deleteVehicleCommand.png[width=300]
+image::deleteVehicleCommand.png[width=500]
 //end::vehicledelete[]
 
 //end::vehicleManagement[]
